ui/user/css/_trophy.scss
.trophies {
  flex: 1 1 auto;
  min-width: 0;
  height: 80px;
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: flex-end;
  gap: 0.35em;
  margin-top: 0 !important;

  > * {
    flex-shrink: 0;
  }

  @media (max-width: at-most($small)) {
    display: none;
  }
}

.more-trophies {
  flex: 0 0 auto;
  align-self: center;
  height: 30px;
  min-width: 32px;
  padding: 0 0.6em;
  margin-inline-end: 0.5em;
  border: none;
  border-radius: 1em;
  background: $c-primary;
  color: $c-over;
  font-size: 0.9em;
  font-weight: bold;
  line-height: 30px;
  text-align: center;
  cursor: pointer;
  user-select: none;
  box-shadow: 0 1px 3px rgb(0 0 0 / 0.3);
  transition: opacity 0.2s;

  &:hover,
  &:focus-visible {
    opacity: 0.7;
  }

  &:focus-visible {
    outline: 2px solid $c-primary;
    outline-offset: 2px;
  }
}

.dialog-content.all-trophies-dialog {
  width: 42em;
  max-width: 100%;
  padding: 2em 2em 2.5em;
  text-align: start;
}

.all-trophies {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(6em, 1fr));
  gap: 1em 0.5em;

  @media (max-width: at-most($small)) {
    grid-template-columns: repeat(auto-fill, minmax(5em, 1fr));
  }

  &__title {
    grid-column: 1 / -1;
    margin: 0 0 0.5em;
    padding-bottom: 0.6em;
    border-bottom: $border;
    font-size: 1.6em;
    font-weight: bold;
    line-height: 1.2;
  }

  &__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0.8em 0.4em;
    border-radius: $box-radius-size;
    text-align: center;
    transition: background 0.2s;

    &:hover {
      background: $c-bg-zebra;
    }
  }

  &__item .trophy,
  &__item .shield-trophy,
  &__item .revol_trophy {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    width: 100%;
    height: 65px;
    margin: 0 !important;
    padding: 0;
    font-size: 52px;
    transform: none;
    line-height: 1;

    img {
      height: 60px;
      width: auto;
    }
  }

  &__item .fire-trophy {
    margin: 0 !important;
    padding: 0;
    height: 65px !important;
    width: 100% !important;
    font-size: 48px !important;
    position: static !important;
    align-items: flex-end !important;
    line-height: 1 !important;
  }

  &__item .stacked {
    height: 65px;
    display: flex;
    align-items: flex-end;
    justify-content: center;

    .trophy {
      width: 52px;
      height: 52px;
      font-size: 48px;
      margin: 0;
      padding: 0;
      position: static;
    }
  }

  &__name {
    color: $c-font-dim;
    font-size: 0.85em;
    line-height: 1.3;
    overflow-wrap: anywhere;
    margin-top: 1em;
  }
}

.trophy.award {
  font-family: lichess;
  speak: none;
  line-height: 100%;
}

.trophy {
  display: flex;
  align-items: center;
  height: 40px;
  user-select: none;

  img {
    height: 80px;
  }

  &.top1 {
    filter: drop-shadow(0 0 6px $c-brag);
  }
}

.trophy,
.shield-trophy {
  transition: transform 0.2s;

  &:not(.patron):hover {
    transform: translateY(-3px);
  }
}

.stacked {
  height: 40px;
  display: flex;
  align-items: center;
  gap: 0.35em;
}

.stacked .trophy {
  width: 65px;
  height: 65px;
  font-size: 65px;
}

.fire-trophy {
  &,
  &:hover {
    color: color-mix(in oklab, $c-font 20%, white);
  }

  opacity: 0.9;
  height: 80px;
  position: relative;

  &:hover {
    opacity: 1;
  }

  &.marathonWinner,
  &.marathonTopTen,
  &.marathonTopFifty {
    filter: hue-rotate(190deg);
    color: $c-marathon;
  }

  &.marathonTopTen {
    font-size: 58px;
    width: 55px;
    height: 55px;
    margin-top: 22px;
  }

  &.marathonTopFifty,
  &.marathonTopHundred,
  &.marathonTopFivehundred {
    font-size: 50px;
    height: 50px;
    width: 50px;
    margin-top: 30px;
    animation: none;
  }

  &.marathonTopFifty {
    text-shadow:
      0 0 5px #ffae34,
      0 0 6.25px #ec760c,
      0 0 7.5px #cd4606;
  }

  &.marathonTopHundred {
    text-shadow: none;
    color: #066ccd;
  }

  &.marathonTopFivehundred {
    text-shadow: none;
  }
}

.trophy.icon3d {
  width: 40px;
  height: 40px;
  font-size: 39px;
  color: $c-font-dimmer;
  text-shadow: 0 1px 0 rgb(0 0 0 / 0.5);
}

.trophy.zugMiracle {
  align-items: flex-end;
  margin: 0 8px;
  transition: 2s;

  img {
    height: 60px;
  }

  &:hover {
    transform: translateY(-9px);
    animation: psyche 0.3s ease-in-out infinite alternate;
  }
}

@keyframes psyche {
  100% {
    filter: hue-rotate(360deg);
  }
}

.trophy.streaming {
  @extend %fire-trophy-shadow;

  color: $c-brag;
  animation: fire-trophy 1.25s ease-in-out infinite alternate;
}

.trophy.patron {
  flex: 0 0 auto;
  font-size: 60px;
  margin: 0 -10px 0 30px;
  transform: scaleX(-1);

  .trophies &:last-child {
    margin-inline-end: 0;
  }

  @include if-rtl {
    transform: none;
  }

  color: $c-brag;
  transition: margin-top 0.5s;

  &:hover {
    @extend %fire-trophy-shadow;

    animation: fire-trophy 1.25s ease-in-out infinite alternate;
  }
}

.combo-trophy {
  width: 60px;
  height: 60px;
  background-size: contain;
  background-repeat: no-repeat;
  font-family: lichess;
  text-align: center;
}

.shield-trophy {
  width: 50px;
  background-image: url('../images/trophy/shield-gold.png');
  font-size: 30px;
  line-height: 60px;
  color: #333 !important;
  text-shadow: 0 0 6px #fff;
  margin-top: -20px;
  filter: drop-shadow(0 0 6px $c-brag);
}

.revol_trophy {
  background-image: url('../images/trophy/round-star.png');
  font-size: 24px;
  line-height: 68px;
  color: #fff !important;
  text-shadow: 0 0 4px #444;
  margin-top: -18px;
}

